<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="android_is_fun">Android is fun</string>
    <string name="welcome_to_android_kick_off_with_amit_swain">Welcome to Android Kick-Off with Amit Swain</string>
    <string name="click_here">Click Here!</string>
    <string name="enter_your_name_here">Enter your Name here</string>
    <string name="welcome_to_tony_stark_portal">Welcome to Tony Stark Portal!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_your_password_here">Enter Your Password here</string>
    <string name="tony_stark">Tony_Stark</string>
    <string name="tony_stark_text">Tony Stark</string>
    <string name="tony_email">tony@starkindustries.com</string>
    <string name="_91_11155555">+91 11155555</string>
    <string name="more_information">More Information</string>
    <string name="steve_starkindustries_com">steve@starkindustries.com</string>
    <string name="thor_odinson">Thor Odinson</string>
    <string name="_91_33355555">+91 33355555</string>
    <string name="_91_44455555">+91 44455555</string>
    <string name="dr_bruce_banner">Dr. Bruce Banner</string>
    <string name="thor_starkindustries_com">thor@starkindustries.com</string>
    <string name="hulk_starkindustries_com">hulk@starkindustries.com</string>
    <string name="t_challa">T\' Challa</string>
    <string name="tchalla_starkindustries_com">tchalla@starkindustries.com</string>
    <string name="natasha_romanova">Natasha Romanova</string>
    <string name="natasha_starkindustries_com">natasha@starkindustries.com</string>
    <string name="_91_66655555">+91 66655555</string>
    <string name="steve_rogers">Steve Rogers</string>
    <string name="avenger_s_list">Avenger\'s List</string>
    <string name="avengers_logo">Avengers Logo</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="left_blank">This is intentionally left blank for you to make :)</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="android_is_fun_str">Android is fun</string>
    <string name="i_am_learning_android_from_internshala">I am learning android from Internshala</string>
    <string name="enter_your_registered_mobile_number">Enter your Registered Mobile Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_registerd_mobile_number">Enter Registerd Mobile Number</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="register">Register</string>
    <string name="send_password_reet_link_on_email">Send Password Reet Link on Email</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
</resources>