<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/avengers_logo" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name"
        android:padding="6dp"
        android:layout_below="@+id/imgAvengersLogo"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        android:padding="6dp"
        android:layout_below="@+id/etFirstName"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_mobile_number"
        android:padding="6dp"
        android:layout_below="@+id/etLastName"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etChooseAPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/choose_a_password"
        android:layout_below="@id/etMobileNumber"
        android:padding="6dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/etConfirmYourPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_your_password"
        android:layout_below="@id/etChooseAPassword"
        android:padding="6dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:layout_below="@id/etConfirmYourPassword"
        android:background="@color/myColor"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>


</RelativeLayout>