<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/avengers_logo" />

    <EditText
        android:id="@+id/etRegisteredMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_registered_mobile_number"
        android:padding="6dp"
        android:layout_below="@+id/imgAvengersLogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints="phone" />

    <Button
        android:id="@+id/btnSendLinkOnMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:layout_below="@id/etRegisteredMobileNumber"
        android:background="@color/myColor"
        android:text="@string/send_password_reset_link"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>


</RelativeLayout>